force-app/main/default/objects/OOB_Setting__c/OOB_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OOB_Setting</label>
</CustomObject>