force-app/main/default/objects/OOB_Setting__c/fields/TwistOOB_RedirectionURL__c.field-meta.xml
<CustomField>
    <fullName>TwistOOB_RedirectionURL__c</fullName>
    <description>redirection url</description>
    <label>TwistOOB_RedirectionURL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>