force-app/main/default/objects/OOB_Setting__c/fields/TwistOOB_RedirectionURL_Preview__c.field-meta.xml
<CustomField>
    <fullName>TwistOOB_RedirectionURL_Preview__c</fullName>
    <label>TwistOOB RedirectionURL Preview</label>
    <length>50</length>
    <type>Text</type>
</CustomField>