force-app/main/default/objects/OOB_Setting__c/fields/VisibilityCountryIso2__c.field-meta.xml
<CustomField>
    <fullName>VisibilityCountryIso2__c</fullName>
    <description>List of iso code 2 separeta with an ;
ex : FR;KR</description>
    <label>VisibilityCountryIso2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>