force-app/main/default/objects/OOB_Setting__c/fields/ZoneManagement_AMERICA__c.field-meta.xml
<CustomField>
    <fullName>ZoneManagement_AMERICA__c</fullName>
    <label>ZoneManagement AMERICA</label>
    <length>2</length>
    <type>Text</type>
</CustomField>