force-app/main/default/objects/OOB_Setting__c/fields/ZoneManagement_EMEA__c.field-meta.xml
<CustomField>
    <fullName>ZoneManagement_EMEA__c</fullName>
    <label>ZoneManagement EMEA</label>
    <length>2</length>
    <type>Text</type>
</CustomField>