force-app/main/default/objects/OOB_Setting__c/fields/ZoneManagement_NORTH_ASIA__c.field-meta.xml
<CustomField>
    <fullName>ZoneManagement_NORTH_ASIA__c</fullName>
    <label>ZoneManagement NORTH ASIA</label>
    <length>2</length>
    <type>Text</type>
</CustomField>